--- a/page/index.scss
+++ b/page/index.scss
@@ -1,2 +1,5 @@
+@import "../blocks/variables.scss";
+@import "../blocks/mixins.scss";
 @import "../vendor/normalize.css";
 @import "../vendor/fonts/fonts.scss";
+@import "../blocks/header/header.scss";
