--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   margin: 0;
   width: 100%;
   min-width: 320px;
+  font-family: "Prompt", "PT Sans", sans-serif;
 }
 
 /*# sourceMappingURL=page.css.map */
