--- a/page/index.css
+++ b/page/index.css
@@ -52,7 +52,7 @@
 }
 .header__button {
   position: absolute;
-  bottom: 318px;
+  bottom: 330px;
   right: 370px;
   max-width: 350px;
   padding: 11px 30px;
@@ -71,6 +71,90 @@
 .header__button:hover {
   background-color: #ffffff;
   color: #0A0A0A;
+}
+
+.main {
+  max-width: 1440px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+.main__about {
+  margin: 80px 20px;
+}
+.main__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main__title {
+  max-width: 700px;
+  margin: 0;
+  font-family: "Prompt", "PT Sans", sans-serif;
+  font-size: 48px;
+  line-height: 64px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+.main__subtitle {
+  max-width: 700px;
+  margin: 0;
+  font-family: "Prompt", "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+}
+.main__item {
+  min-height: 618px;
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0 0;
+}
+.main__quote {
+  max-width: 700px;
+  width: 100%;
+  font-family: "Prompt", "PT Sans", sans-serif;
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.02em;
+  z-index: 5;
+  margin-right: -175px;
+  align-self: center;
+}
+.main__quote-text {
+  margin: 0;
+}
+.main__quote-author {
+  margin: 24px 0 0;
+}
+.main__image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.main__image_type_medium {
+  margin-right: 175px;
+  margin-left: auto;
+  z-index: 1;
+}
+.main__image_type_large {
+  margin: 0 0 0 auto;
+}
+.main__text {
+  max-width: 700px;
+  align-self: center;
+  margin: 0 0 92px 82px;
+  font-family: "Prompt", "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
 }
 
 /*# sourceMappingURL=index.css.map */
