--- a/page/index.scss
+++ b/page/index.scss
@@ -3,3 +3,4 @@
 @import "../vendor/normalize.css";
 @import "../vendor/fonts/fonts.scss";
 @import "../blocks/header/header.scss";
+@import "../blocks/main/main.scss";
