--- a/page/index.scss
+++ b/page/index.scss
@@ -4,3 +4,4 @@
 @import "../vendor/fonts/fonts.scss";
 @import "../blocks/header/header.scss";
 @import "../blocks/main/main.scss";
+@import "../blocks/about/about.scss";
