feat: added cards section

--- a/page/index.css
+++ b/page/index.css
@@ -46,8 +46,7 @@
   letter-spacing: 0.04em;
 }
 .header__image {
-  width: 700px;
-  height: 900px;
+  max-width: 700px;
   margin: 0 0 0 24px;
 }
 .header__button {
@@ -76,11 +75,12 @@
 .main {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
   box-sizing: border-box;
 }
 
 .about {
-  margin: 80px 20px;
+  margin: 80px 0;
 }
 .about__description {
   display: flex;
@@ -156,6 +156,46 @@
   font-weight: 400;
   font-style: normal;
   letter-spacing: normal;
+}
+
+.cards {
+  width: 100%;
+  margin: 0 auto;
+}
+.cards__title {
+  margin: 0 auto;
+  font-family: "Prompt", "PT Sans", sans-serif;
+  font-size: 48px;
+  line-height: 64px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+.cards__items {
+  display: grid;
+  margin: 40px auto 80px;
+  max-width: 100%;
+  grid-template-columns: repeat(4, fit-content(350px));
+  column-gap: 0;
+  row-gap: 0;
+  grid-auto-rows: 1fr;
+  overflow-y: hidden;
+}
+.cards__item {
+  max-width: 100%;
+  margin: 0 auto;
+  align-self: center;
+}
+@media screen and (max-width: 1023px) {
+  .cards__items {
+    grid-template-columns: repeat(3, fit-content(350px));
+  }
+}
+@media screen and (max-width: 767px) {
+  .cards__items {
+    grid-template-columns: repeat(2, fit-content(350px));
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
