--- a/page/index.scss
+++ b/page/index.scss
@@ -5,3 +5,4 @@
 @import "../blocks/header/header.scss";
 @import "../blocks/main/main.scss";
 @import "../blocks/about/about.scss";
+@import "../blocks/cards/cards.scss";
