--- a/page/index.scss
+++ b/page/index.scss
@@ -6,3 +6,4 @@
 @import "../blocks/main/main.scss";
 @import "../blocks/about/about.scss";
 @import "../blocks/cards/cards.scss";
+@import "../blocks/footer/footer.scss";
