--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -38,14 +38,12 @@
     bottom: 330px;
     right: 370px;
     max-width: 350px;
-    padding: 11px 30px;
-    box-sizing: border-box;
-    border: 0.5px solid $color-base;
-    @include font-small();
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
+    @include button();
+    padding-left: 30px;
+    padding-right: 30px;
     color: #ffffff;
     background-color: #0A0A0A;
+    border: 0.5px solid $color-base;
   }
 
   &__button:hover {
