feat: added animation for about section

--- a/page/index.scss
+++ b/page/index.scss
@@ -7,3 +7,4 @@
 @import "../blocks/about/about.scss";
 @import "../blocks/cards/cards.scss";
 @import "../blocks/footer/footer.scss";
+@import "../blocks/fade/fade.scss";
