--- a/page/index.css
+++ b/page/index.css
@@ -316,4 +316,32 @@
   margin: 0 auto;
 }
 
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.fade-in-left {
+  animation: fadeInLeft 1s ease-out 300ms;
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.fade-in-right {
+  animation: fadeInRight 1s ease-out 300ms;
+}
+
 /*# sourceMappingURL=index.css.map */
