--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,7 @@
   width: 100%;
   min-width: 320px;
   font-family: "Prompt", "PT Sans", sans-serif;
+  position: relative;
 }
 
 /*# sourceMappingURL=page.css.map */
