--- a/page/index.scss
+++ b/page/index.scss
@@ -8,3 +8,4 @@
 @import "../blocks/cards/cards.scss";
 @import "../blocks/footer/footer.scss";
 @import "../blocks/fade/fade.scss";
+@import "../blocks/popup/popup";
