--- a/blocks/mixins.scss
+++ b/blocks/mixins.scss
@@ -15,6 +15,15 @@
   letter-spacing: normal;
 }
 
+@mixin font-base-mobile() {
+  font-family: 'Prompt', "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+}
+
 @mixin font-medium() {
   font-family: 'Prompt', "PT Sans", sans-serif;
   font-size: 32px;
@@ -24,10 +33,39 @@
   letter-spacing: 0.02em;
 }
 
-@mixin font-large() {
+@mixin font-medium-mobile() {
+  font-family: 'Prompt', "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: normal;
+}
+
+@mixin font-large-desctop() {
   font-family: 'Prompt', "PT Sans", sans-serif;
   font-size: 48px;
   line-height: 64px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+@mixin font-large-tablet() {
+  font-family: 'Prompt', "PT Sans", sans-serif;
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+@mixin font-large-mobile() {
+  font-family: 'Prompt', "PT Sans", sans-serif;
+  font-size: 24px;
+  line-height: 32px;
   font-weight: 500;
   font-style: normal;
   letter-spacing: 0.04em;
