--- a/blocks/about/about.scss
+++ b/blocks/about/about.scss
@@ -1,6 +1,10 @@
 .about {
   margin: 80px 0;
 
+  @media screen and (max-width: 1023px){
+    margin: 60px 0 80px;
+  }
+
   &__description {
     display: flex;
     flex-direction: row;
@@ -10,32 +14,49 @@
   &__title {
     max-width: 700px;
     margin: 0;
-    @include font-large();
+    @include font-large-desctop();
+
+    @media screen and (max-width: 1023px){
+      max-width: 364px;
+      @include font-large-tablet();
+    }
   }
 
   &__subtitle {
     max-width: 700px;
     margin: 0;
     @include font-base();
+
+    @media screen and (max-width: 1023px){
+      max-width: 364px;
+    }
   }
 
   &__item {
-    //position: relative;
-    min-height: 618px;
     display: flex;
     justify-content: space-between;
     margin: 80px 0 0;
+
+    @media screen and (max-width: 1023px){
+      margin: 70px 0 0;
+    }
+
+    @media screen and (max-width: 767px){
+      flex-direction: column;
+      margin: 40px 0 0;
+    }
   }
 
   &__quote {
     max-width: 700px;
-    width: 100%;
     @include font-medium();
     z-index: 5;
-    margin-right: -175px;
     align-self: center;
-    //margin: auto 0;
-    //position: absolute;
+    margin: 0 -175px 0 0;
+
+    @media screen and (max-width: 1023px){
+      max-width: 364px;
+    }
   }
 
   &__quote-text {
@@ -47,22 +68,43 @@
   }
 
   &__image {
-    position: relative;
-    //max-width: 875px;
-    //width: 100%;
-    //min-height: 618px;
-    width: 100%;
-    height: 100%;
+    max-width: 875px;
+
+    @media screen and (max-width: 1023px){
+      max-width: 485px;
+      margin: 50px 0;
+    }
 
     &_type_medium {
       margin-right: 175px;
-      margin-left: auto;
+      margin-left: 0;
       z-index: 1;
+
+      @media screen and (max-width: 1023px){
+        margin-right: 121px;
+        height: 452px;
+      }
     }
 
     &_type_large {
-      margin: 0 0 0 auto;
+      margin: 0;
+      @media screen and (max-width: 1023px) {
+        &_type_large {
+          width: 485px;
+        }
+      }
     }
+
+    &_type_small {
+      width: 100%;
+
+      @media screen and (max-width: 1023px){
+        width: 304px;
+        height: 100%;
+        margin-top:40px;
+      }
+    }
+
   }
 
   &__text {
@@ -70,5 +112,10 @@
     align-self: center;
     margin: 0 0 92px 82px;
     @include font-base();
+
+    @media screen and (max-width: 1023px){
+      max-width: 373px;
+      margin: 0 -9px 50px 60px;
+    }
   }
 }
