--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -1,19 +1,22 @@
 .header {
   width: 100%;
-  max-height: 900px;
+  min-height: 900px;
   @include font-medium();
   background-color:  #E7E7E2;
+
+  @media screen and (max-width: 1023px){
+    min-height: 646px;
+  }
 
   &__container {
     position: relative;
     max-width: 1440px;
     margin: 0 auto;
-  }
+    display: flex;
 
-  &__description {
-    position: absolute;
-    top: 310px;
-    right: 20px;
+    @media screen and (max-width: 1023px){
+      max-width: 768px;
+    }
   }
 
   &__title {
@@ -23,19 +26,37 @@
     width: 700px;
     margin: 0;
     text-transform: uppercase;
-    font-size: 48px;
-    line-height: 64px;
-    letter-spacing: 0.04em;
+    @include font-large-desctop();
+
+    @media screen and (max-width: 1023px){
+      top: 223px;
+      max-width: 485px;
+      @include font-large-tablet();
+    }
   }
 
   &__image {
     max-width: 700px;
     margin: 0 0 0 24px;
+
+    &_type_tablet {
+      display: none;
+    }
+
+    @media screen and (max-width: 1023px){
+      display: none;
+      margin: 0;
+
+      &_type_tablet {
+        display: block;
+        max-width: 486px;
+      }
+    }
   }
 
   &__button {
     position: absolute;
-    bottom: 330px;
+    bottom: 318px;
     right: 370px;
     max-width: 350px;
     @include button();
@@ -44,6 +65,11 @@
     color: #ffffff;
     background-color: #0A0A0A;
     border: 0.5px solid $color-base;
+
+    @media screen and (max-width: 1023px){
+      right: 155px;
+      bottom: 223px;
+    }
   }
 
   &__button:hover {
