--- a/blocks/main/main.scss
+++ b/blocks/main/main.scss
@@ -3,4 +3,8 @@
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
+
+  @media screen and (max-width: 1023px){
+    max-width: 768px;
+  }
 }
