--- a/blocks/about/about.scss
+++ b/blocks/about/about.scss
@@ -1,14 +1,21 @@
 .about {
-  margin: 80px 0;
+  margin: 0 0 80px;
 
-  @media screen and (max-width: 1023px){
-    margin: 60px 0 80px;
+  @media screen and (max-width: 767px){
+    margin: 0 0 40px;
+    max-width: 100%;
   }
 
   &__description {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @media screen and (max-width: 767px){
+      flex-direction: column;
+      max-width: 485px;
+      margin: 0 auto;
+    }
   }
 
   &__title {
@@ -20,6 +27,15 @@
       max-width: 364px;
       @include font-large-tablet();
     }
+
+    @media screen and (max-width: 767px){
+      margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: 425px){
+      max-width: 280px;
+      @include font-large-mobile();
+    }
   }
 
   &__subtitle {
@@ -29,6 +45,11 @@
 
     @media screen and (max-width: 1023px){
       max-width: 364px;
+    }
+
+    @media screen and (max-width: 425px){
+      max-width: 280px;
+      @include font-small();
     }
   }
 
@@ -43,7 +64,7 @@
 
     @media screen and (max-width: 767px){
       flex-direction: column;
-      margin: 40px 0 0;
+      margin: 0;
     }
   }
 
@@ -57,6 +78,15 @@
     @media screen and (max-width: 1023px){
       max-width: 364px;
     }
+
+    @media screen and (max-width: 767px){
+      margin: 0;
+      order: 2;
+    }
+
+    @media screen and (max-width: 425px){
+      @include font-medium-mobile();
+    }
   }
 
   &__quote-text {
@@ -65,6 +95,10 @@
 
   &__quote-author {
     margin: 24px 0 0;
+
+    @media screen and (max-width: 767px){
+      margin: 20px 0 0;
+    }
   }
 
   &__image {
@@ -73,6 +107,11 @@
     @media screen and (max-width: 1023px){
       max-width: 485px;
       margin: 50px 0;
+    }
+
+    @media screen and (max-width: 767px){
+      margin: 40px auto 20px;
+      order: 1;
     }
 
     &_type_medium {
@@ -84,24 +123,47 @@
         margin-right: 121px;
         height: 452px;
       }
+
+      @media screen and (max-width: 767px){
+        width: 100%;
+        height: 100%;
+        margin: 40px auto 20px;
+      }
+
+      @media screen and (max-width: 425px){
+        width: 280px;
+        height: 348px;
+      }
     }
 
     &_type_large {
       margin: 0;
+
       @media screen and (max-width: 1023px) {
         &_type_large {
           width: 485px;
+        }
+
+        @media screen and (max-width: 767px){
+          margin: 40px auto 20px;
+          width: 100%;
         }
       }
     }
 
     &_type_small {
       width: 100%;
+      order: 1;
 
       @media screen and (max-width: 1023px){
         width: 304px;
         height: 100%;
-        margin-top:40px;
+        margin-top: 40px;
+      }
+
+      @media screen and (max-width: 767px){
+        margin: 40px auto 20px;
+        width: 100%;
       }
     }
 
@@ -112,10 +174,16 @@
     align-self: center;
     margin: 0 0 92px 82px;
     @include font-base();
+    order: 2;
 
     @media screen and (max-width: 1023px){
       max-width: 373px;
       margin: 0 -9px 50px 60px;
+    }
+
+    @media screen and (max-width: 425px){
+      margin: 0;
+      @include font-small();
     }
   }
 }
