--- a/blocks/main/main.scss
+++ b/blocks/main/main.scss
@@ -1,10 +1,16 @@
 .main {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 80px 20px;
   box-sizing: border-box;
 
   @media screen and (max-width: 1023px){
     max-width: 768px;
+    padding: 60px 20px;
+  }
+
+  @media screen and (max-width: 767px){
+    min-width: 320px;
+    padding: 40px 20px;
   }
 }
