--- a/blocks/mixins.scss
+++ b/blocks/mixins.scss
@@ -6,19 +6,18 @@
   font-style: normal;
 }
 
+@mixin font-small-mobile () {
+  font-family: 'Prompt', "PT Sans", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @mixin font-base() {
   font-family: 'Prompt', "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 32px;
-  font-weight: 400;
-  font-style: normal;
-  letter-spacing: normal;
-}
-
-@mixin font-base-mobile() {
-  font-family: 'Prompt', "PT Sans", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
   font-style: normal;
   letter-spacing: normal;
@@ -76,6 +75,16 @@
   padding: 11px 0;
   box-sizing: border-box;
   @include font-small();
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+}
+
+@mixin button-mobile() {
+  padding: 11px 0;
+  box-sizing: border-box;
+  @include font-small-mobile();
+  font-weight: 500;
   letter-spacing: 0.02em;
   text-transform: uppercase;
 }
