--- a/blocks/popup/popup.scss
+++ b/blocks/popup/popup.scss
@@ -9,24 +9,36 @@
   z-index: 15;
 
   &__container {
-    position: relative;
     margin: 0;
     padding: 68px 20px 20px;
-    width: 480px;
-    height: 100%;
-    background-color: #0A0A0A;
+    max-width: 480px;
+    min-height: 810px;
+    background-color: #000000;
     box-sizing: border-box;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width: 767px){
+      padding: 44px 20px 20px;
+      min-width: 320px;
+      min-height: 360px;
+    }
   }
 
   &__menu-list {
-    height: 722px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     list-style: none;
     @include font-small();
     letter-spacing: 0.02em;
     text-transform: uppercase;
     color: #ffffff;
-    padding: 245px 0;
     margin: 0;
+    padding: 0;
     text-align: center;
     box-sizing: border-box;
   }
@@ -37,11 +49,20 @@
     &:last-child {
       margin-bottom: 0;
     }
+
+    @media screen and (max-width: 425px){
+      margin: 0 auto 40px;
+    }
   }
 
-  &__menu-link:hover {
-    border-bottom: 0.5px solid #ffffff;
-    cursor: pointer;
+  &__menu-link {
+    text-decoration: none;
+    color: #ffffff;
+
+    &:hover {
+      border-bottom: 0.5px solid #ffffff;
+      cursor: pointer;
+    }
   }
 
   &__close {
@@ -54,7 +75,13 @@
       top: 20px;
       left: 20px;
       cursor: pointer;
+
+    @media screen and (max-width: 425px){
+      width: 24px;
+      height: 24px;
+      background-image: url("../../images/close-button-mobile.svg");
     }
+  }
 
   &__opened {
     display: block;
