--- a/page/index.css
+++ b/page/index.css
@@ -29,6 +29,11 @@
     min-height: 646px;
   }
 }
+@media screen and (max-width: 767px) {
+  .header {
+    min-height: 426px;
+  }
+}
 .header__container {
   position: relative;
   max-width: 1440px;
@@ -38,6 +43,11 @@
 @media screen and (max-width: 1023px) {
   .header__container {
     max-width: 768px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header__container {
+    min-width: 320px;
   }
 }
 .header__title {
@@ -68,6 +78,19 @@
     text-transform: uppercase;
   }
 }
+@media screen and (max-width: 600px) {
+  .header__title {
+    top: 111px;
+    max-width: 280px;
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+}
 .header__image {
   max-width: 700px;
   margin: 0 0 0 24px;
@@ -85,11 +108,17 @@
     max-width: 486px;
   }
 }
+@media screen and (max-width: 600px) {
+  .header__image {
+    max-width: 320px;
+    min-height: 426px;
+  }
+}
 .header__button {
   position: absolute;
   bottom: 318px;
   right: 370px;
-  max-width: 350px;
+  width: 350px;
   padding: 11px 0;
   box-sizing: border-box;
   font-family: "Prompt", "PT Sans", sans-serif;
@@ -97,18 +126,35 @@
   line-height: 24px;
   font-weight: 400;
   font-style: normal;
+  font-weight: 500;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  padding-left: 30px;
-  padding-right: 30px;
   color: #ffffff;
   background-color: #0A0A0A;
   border: 0.5px solid #0A0A0A;
+  box-sizing: border-box;
 }
 @media screen and (max-width: 1023px) {
   .header__button {
     right: 155px;
     bottom: 223px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header__button {
+    width: 280px;
+    right: 20px;
+    bottom: 111px;
+    padding: 11px 0;
+    box-sizing: border-box;
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
   }
 }
 .header__button:hover {
@@ -125,6 +171,13 @@
   top: 20px;
   left: 20px;
 }
+@media screen and (max-width: 600px) {
+  .header__menu {
+    min-height: 26px;
+    padding-left: 24px;
+    top: 16px;
+  }
+}
 .header__menu-icon {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -137,6 +190,12 @@
   border: none;
   background-color: transparent;
 }
+@media screen and (max-width: 600px) {
+  .header__menu-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
 .header__menu-icon:before {
   content: "";
   position: absolute;
@@ -148,6 +207,13 @@
   cursor: pointer;
   z-index: 10;
 }
+@media screen and (max-width: 600px) {
+  .header__menu-icon:before {
+    background-image: url("../../images/burger-icon-mobile.svg");
+    width: 24px;
+    height: 24px;
+  }
+}
 .header__menu-title {
   display: block;
   margin: auto 0 auto 16px;
@@ -156,34 +222,61 @@
   line-height: 24px;
   font-weight: 400;
   font-style: normal;
+  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.02em;
+}
+@media screen and (max-width: 600px) {
+  .header__menu-title {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1;
+    margin: auto 0 auto 18px;
+  }
 }
 
 .main {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 80px 20px;
   box-sizing: border-box;
 }
 @media screen and (max-width: 1023px) {
   .main {
     max-width: 768px;
+    padding: 60px 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .main {
+    min-width: 320px;
+    padding: 40px 20px;
   }
 }
 
 .about {
-  margin: 80px 0;
+  margin: 0 0 80px;
 }
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   .about {
-    margin: 60px 0 80px;
+    margin: 0 0 40px;
+    max-width: 100%;
   }
 }
 .about__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+@media screen and (max-width: 767px) {
+  .about__description {
+    flex-direction: column;
+    max-width: 485px;
+    margin: 0 auto;
+  }
 }
 .about__title {
   max-width: 700px;
@@ -208,6 +301,23 @@
     text-transform: uppercase;
   }
 }
+@media screen and (max-width: 767px) {
+  .about__title {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about__title {
+    max-width: 280px;
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+}
 .about__subtitle {
   max-width: 700px;
   margin: 0;
@@ -223,6 +333,16 @@
     max-width: 364px;
   }
 }
+@media screen and (max-width: 425px) {
+  .about__subtitle {
+    max-width: 280px;
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
 .about__item {
   display: flex;
   justify-content: space-between;
@@ -236,7 +356,7 @@
 @media screen and (max-width: 767px) {
   .about__item {
     flex-direction: column;
-    margin: 40px 0 0;
+    margin: 0;
   }
 }
 .about__quote {
@@ -256,11 +376,32 @@
     max-width: 364px;
   }
 }
+@media screen and (max-width: 767px) {
+  .about__quote {
+    margin: 0;
+    order: 2;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about__quote {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: normal;
+  }
+}
 .about__quote-text {
   margin: 0;
 }
 .about__quote-author {
   margin: 24px 0 0;
+}
+@media screen and (max-width: 767px) {
+  .about__quote-author {
+    margin: 20px 0 0;
+  }
 }
 .about__image {
   max-width: 875px;
@@ -269,6 +410,12 @@
   .about__image {
     max-width: 485px;
     margin: 50px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .about__image {
+    margin: 40px auto 20px;
+    order: 1;
   }
 }
 .about__image_type_medium {
@@ -282,6 +429,19 @@
     height: 452px;
   }
 }
+@media screen and (max-width: 767px) {
+  .about__image_type_medium {
+    width: 100%;
+    height: 100%;
+    margin: 40px auto 20px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about__image_type_medium {
+    width: 280px;
+    height: 348px;
+  }
+}
 .about__image_type_large {
   margin: 0;
 }
@@ -290,14 +450,27 @@
     width: 485px;
   }
 }
+@media screen and (max-width: 1023px) and (max-width: 767px) {
+  .about__image_type_large {
+    margin: 40px auto 20px;
+    width: 100%;
+  }
+}
 .about__image_type_small {
   width: 100%;
+  order: 1;
 }
 @media screen and (max-width: 1023px) {
   .about__image_type_small {
     width: 304px;
     height: 100%;
     margin-top: 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .about__image_type_small {
+    margin: 40px auto 20px;
+    width: 100%;
   }
 }
 .about__text {
@@ -310,11 +483,22 @@
   font-weight: 400;
   font-style: normal;
   letter-spacing: normal;
+  order: 2;
 }
 @media screen and (max-width: 1023px) {
   .about__text {
     max-width: 373px;
     margin: 0 -9px 50px 60px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about__text {
+    margin: 0;
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-style: normal;
   }
 }
 
@@ -343,9 +527,20 @@
     text-transform: uppercase;
   }
 }
+@media screen and (max-width: 425px) {
+  .cards__title {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+}
 .cards__items {
   display: grid;
-  margin: 40px auto 80px;
+  margin: 40px auto 0;
   max-width: 100%;
   grid-template-columns: repeat(4, fit-content(350px));
   column-gap: 0;
@@ -355,13 +550,17 @@
 }
 @media screen and (max-width: 1023px) {
   .cards__items {
-    margin-bottom: 60px;
     grid-template-columns: repeat(3, fit-content(350px));
   }
 }
 @media screen and (max-width: 767px) {
   .cards__items {
     grid-template-columns: repeat(2, fit-content(350px));
+  }
+}
+@media screen and (max-width: 425px) {
+  .cards__items {
+    margin: 20px auto 0;
   }
 }
 .cards__item {
@@ -378,6 +577,11 @@
   padding: 40px 0;
   box-sizing: border-box;
 }
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 40px 20px;
+  }
+}
 .footer__container {
   max-width: 700px;
   margin: 0 auto;
@@ -385,6 +589,11 @@
 @media screen and (max-width: 1023px) {
   .footer__container {
     max-width: 486px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .footer__container {
+    max-width: 280px;
   }
 }
 .footer__text {
@@ -397,6 +606,15 @@
   text-align: center;
   margin: 0;
 }
+@media screen and (max-width: 425px) {
+  .footer__text {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
 .footer__form {
   margin: 40px 0;
 }
@@ -408,6 +626,12 @@
 }
 .footer__form-item:last-child {
   margin: 0;
+}
+@media screen and (max-width: 425px) {
+  .footer__form-item_type_mobile {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .footer__form-input {
   border: 0.5px solid #ffffff;
@@ -425,6 +649,13 @@
 }
 .footer__form-input::placeholder {
   color: #666666;
+}
+@media screen and (max-width: 425px) {
+  .footer__form-input {
+    max-width: 280px;
+    padding: 9px 0;
+    text-align: center;
+  }
 }
 .footer__form-input_type_checkbox {
   -webkit-appearance: none;
@@ -458,6 +689,7 @@
   line-height: 24px;
   font-weight: 400;
   font-style: normal;
+  font-weight: 500;
   letter-spacing: 0.02em;
   text-transform: uppercase;
   padding-left: 23px;
@@ -470,6 +702,12 @@
   border: 0.5px solid #ffffff;
   background-color: #0A0A0A;
   color: #ffffff;
+}
+@media screen and (max-width: 425px) {
+  .footer__button {
+    width: 280px;
+    padding: 9px 0;
+  }
 }
 .footer__form-label {
   width: 668px;
@@ -486,6 +724,16 @@
     max-width: 454px;
   }
 }
+@media screen and (max-width: 425px) {
+  .footer__form-label {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    font-style: normal;
+    max-width: 248px;
+  }
+}
 .footer__copyright {
   font-family: "Prompt", "PT Sans", sans-serif;
   font-size: 20px;
@@ -495,6 +743,15 @@
   letter-spacing: normal;
   text-align: center;
   margin: 0 auto;
+}
+@media screen and (max-width: 425px) {
+  .footer__copyright {
+    font-family: "Prompt", "PT Sans", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-style: normal;
+  }
 }
 
 @keyframes fadeInLeft {
@@ -536,16 +793,29 @@
   z-index: 15;
 }
 .popup__container {
-  position: relative;
   margin: 0;
   padding: 68px 20px 20px;
-  width: 480px;
-  height: 100%;
-  background-color: #0A0A0A;
+  max-width: 480px;
+  min-height: 810px;
+  background-color: #000000;
   box-sizing: border-box;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .popup__container {
+    padding: 44px 20px 20px;
+    min-width: 320px;
+    min-height: 360px;
+  }
 }
 .popup__menu-list {
-  height: 722px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
   list-style: none;
   font-family: "Prompt", "PT Sans", sans-serif;
   font-size: 16px;
@@ -555,8 +825,8 @@
   letter-spacing: 0.02em;
   text-transform: uppercase;
   color: #ffffff;
-  padding: 245px 0;
   margin: 0;
+  padding: 0;
   text-align: center;
   box-sizing: border-box;
 }
@@ -565,6 +835,15 @@
 }
 .popup__menu-item:last-child {
   margin-bottom: 0;
+}
+@media screen and (max-width: 425px) {
+  .popup__menu-item {
+    margin: 0 auto 40px;
+  }
+}
+.popup__menu-link {
+  text-decoration: none;
+  color: #ffffff;
 }
 .popup__menu-link:hover {
   border-bottom: 0.5px solid #ffffff;
@@ -580,6 +859,13 @@
   top: 20px;
   left: 20px;
   cursor: pointer;
+}
+@media screen and (max-width: 425px) {
+  .popup__close {
+    width: 24px;
+    height: 24px;
+    background-image: url("../../images/close-button-mobile.svg");
+  }
 }
 .popup__opened {
   display: block;
