fix: Changed classes names

--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -119,7 +119,7 @@
     }
   }
 
-  &__menu-icon {
+  &__menu-button {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
