--- a/blocks/fade/fade.scss
+++ b/blocks/fade/fade.scss
@@ -31,3 +31,31 @@
 .fade-in-right {
   animation: fadeInRight 1s ease-out 300ms;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  -webkit-animation: fadeIn;
+  animation: fadeIn 1s linear;
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+.fade-out {
+  -webkit-animation: fadeOut;
+  animation: fadeOut 1s linear;
+}
