--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -84,6 +84,9 @@
     border: 0.5px solid $color-base;
     box-sizing: border-box;
 
+    text-decoration: none;
+    text-align: center;
+
     @media screen and (max-width: 1023px){
       right: 155px;
       bottom: 223px;
@@ -101,6 +104,7 @@
     background-color: #ffffff;
     color: #0A0A0A;
   }
+
 
   &__menu {
     display: flex;
