fix: added some style changes

--- a/blocks/cards/cards.scss
+++ b/blocks/cards/cards.scss
@@ -20,6 +20,7 @@
     margin: 40px auto 0;
     max-width: 100%;
     grid-template-columns: repeat(4, fit-content(350px));
+    grid-template-rows: repeat(2, 1fr);
     column-gap: 0;
     row-gap: 0;
     grid-auto-rows: 1fr;
@@ -31,6 +32,7 @@
 
     @media screen and (max-width: 767px){
       grid-template-columns: repeat(2, fit-content(350px));
+      grid-template-rows: repeat(4, 1fr);
     }
 
     @media screen and (max-width: 425px){
@@ -42,5 +44,25 @@
     max-width: 100%;
     margin: 0 auto;
     align-self: center;
+
+    &:nth-child(7) {
+      @media screen and (max-width: 1023px){
+        display: none;
+      }
+
+      @media screen and (max-width: 767px){
+        display: block;
+      }
+    }
+
+    &:nth-child(8) {
+      @media screen and (max-width: 1023px){
+        display: none;
+      }
+
+      @media screen and (max-width: 767px) {
+        display: block;
+      }
+    }
   }
 }
