--- a/blocks/popup/popup.scss
+++ b/blocks/popup/popup.scss
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 68px 20px 20px;
     max-width: 480px;
-    min-height: 810px;
+    height: 100%;
     background-color: #000000;
     box-sizing: border-box;
     justify-content: center;
@@ -22,7 +22,6 @@
     @media screen and (max-width: 767px){
       padding: 44px 20px 20px;
       min-width: 320px;
-      min-height: 360px;
     }
   }
 
