--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -143,7 +143,7 @@
     &:before {
       content: '';
       position: absolute;
-      background-image: url("../../images/burger-icon.svg");
+      background-image: url("../images/burger-icon.svg");
       width: 48px;
       height: 48px;
       top: 0;
@@ -152,7 +152,7 @@
       z-index: 10;
 
       @media screen and (max-width: 600px) {
-        background-image: url("../../images/burger-icon-mobile.svg");
+        background-image: url("../images/burger-icon-mobile.svg");
         width: 24px;
         height: 24px;
       }
