--- a/blocks/footer/footer.scss
+++ b/blocks/footer/footer.scss
@@ -89,7 +89,7 @@
     &_type_checkbox:before {
       content: '';
       position: absolute;
-      background-image: url("../../images/unchecked-icon.svg");
+      background-image: url("../images/unchecked-icon.svg");
       background-position: center;
       width: 20px;
       height: 20px;
@@ -98,7 +98,7 @@
     }
 
     &_type_checkbox:checked:before {
-      background-image: url("../../images/checked-icon.svg");
+      background-image: url("../images/checked-icon.svg");
     }
   }
 
