--- a/blocks/popup/popup.scss
+++ b/blocks/popup/popup.scss
@@ -69,7 +69,7 @@
     border: none;
     width: 48px;
     height: 48px;
-    background-image: url("../../images/close-button.svg");
+    background-image: url("../images/close-button.svg");
     background-color: transparent;
     top: 20px;
     left: 20px;
@@ -78,7 +78,7 @@
     @media screen and (max-width: 425px) {
       width: 24px;
       height: 24px;
-      background-image: url("../../images/close-button-mobile.svg");
+      background-image: url("../images/close-button-mobile.svg");
     }
   }
 
