--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -15,6 +15,7 @@
   &__container {
     position: relative;
     max-width: 1440px;
+    //max-height: 900px;
     margin: 0 auto;
     display: flex;
 
@@ -49,27 +50,29 @@
     }
   }
 
-  &__image {
-    max-width: 700px;
-    margin: 0 0 0 24px;
-
-    &_type_tablet {
-      display: none;
-    }
+  &__picture {
+    max-height: 900px;
 
     @media screen and (max-width: 1023px) {
-      display: none;
-      margin: 0;
+      max-height: 646px;
+    }
 
-      &_type_tablet {
-        display: block;
-        max-width: 486px;
-      }
+    @media screen and (max-width: 600px) {
+      max-height: 426px;
+    }
+  }
+
+  &__image {
+    max-width: 700px;
+    max-height: 900px;
+    margin: 0 0 0 24px;
+
+    @media screen and (max-width: 1023px) {
+      margin: 0;
     }
 
     @media screen and (max-width: 600px) {
       max-width: 320px;
-      min-height: 426px;
     }
   }
 
